tests/fixtures/syntax/valid/exit_expectation.repor
case "exit expectation" {
  $ true
  assert {
    exit 0
  }
}
