tests/fixtures/syntax/invalid/comment_splits_expectation_tokens.repor
case "x" {
  $ true
  assert {
    exit // comment splits the expectation keyword from its value
    0
  }
}
